test: 단위 테스트 Mockito 적용